--- a/package.json
+++ b/package.json
@@ -45,14 +45,14 @@
     "@nomicfoundation/hardhat-ethers": "^3.0.6",
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@nomiclabs/hardhat-etherscan": "^3.1.8",
-    "@openzeppelin/contracts": "^5.0.2",
-    "@openzeppelin/contracts-upgradeable": "^5.0.2",
+    "@openzeppelin/contracts": "^5.2.0",
+    "@openzeppelin/contracts-upgradeable": "^5.2.0",
     "@openzeppelin/hardhat-upgrades": "^3.2.0",
     "chai": "^4.5.0",
     "chalk": "^5.3.0",
     "dotenv": "^16.4.5",
     "ethers": "^6.13.2",
-    "hardhat": "^2.22.14",
+    "hardhat": "^2.22.18",
     "hardhat-contract-sizer": "^2.10.0",
     "hardhat-gas-reporter": "^1.0.10",
     "ts-node": "^10.9.2",
@@ -66,5 +66,9 @@
     "erc721a": "^4.3.0",
     "solmate": "^6.2.0",
     "strip-ansi": "^7.1.0"
+  },
+  "directories": {
+    "doc": "docs",
+    "test": "test"
   }
 }
